# framequery-sdks

./: .gitignore  LICENSE  README.md
.github/workflows/: go.yml  python.yml  ruby.yml  rust.yml  typescript.yml
go/: README.md  client.go  errors.go  go.mod  models.go
go/examples/quickstart/: main.go
python/: README.md  pyproject.toml
python/examples/: quickstart.py
python/src/framequery/: __init__.py  _async_client.py  _base_client.py  _client.py  _constants.py  _errors.py  _models.py
ruby/: README.md  framequery.gemspec
ruby/examples/: quickstart.rb
ruby/lib/: framequery.rb
ruby/lib/framequery/: client.rb  errors.rb  models.rb  version.rb
rust/: Cargo.toml  README.md
rust/examples/: quickstart.rs
rust/src/: client.rs  errors.rs  lib.rs  models.rs
typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
typescript/examples/: quickstart.ts
typescript/src/: client.ts  errors.ts  index.ts  models.ts
