[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "framequery"
version = "0.1.0"
description = "Python SDK for the FrameQuery video processing API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["video", "processing", "api", "framequery", "transcription", "scene-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]
dependencies = ["httpx>=0.25"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx>=0.21", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/framequery/framequery-sdks"
Documentation = "https://github.com/framequery/framequery-sdks/tree/main/python"
Repository = "https://github.com/framequery/framequery-sdks"

[tool.hatch.build.targets.wheel]
packages = ["src/framequery"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = true
