[package]
name = "framequery"
version = "0.1.0"
edition = "2021"
description = "Rust client for the FrameQuery API"
license = "MIT"
repository = "https://github.com/framequery/framequery-sdks"
keywords = ["video", "processing", "api", "framequery"]
categories = ["api-bindings", "multimedia::video"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "time"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
